work on APSTUD-4230 Externalize UI strings in Rails ruble

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,20 @@ en:
   test_uncommitted: "Test Uncommitted"
   test_units: "Test Units"    
   call_generate_script: "Call Generate Script"
+  generate_button: "Generate"
+  generate_prompt: "Generate:"
+  generate_title: "Rails Generator"
+  name_generator: "%{name} Generator"
+  generator_complete: 'Generator Complete'
+  done_generating_0: "Done generating %{name}"
+  continue: 'Continue'
+  create: 'Create'
+  scaffold_controller_name: "Scaffold Controller Name"
+  scaffold_controller_prompt: "Name the new controller for the scaffold:"
+  scaffold_model_attributes: "Scaffold Model Attributes"
+  scaffold_model_prompt: "Name the attribute pairs for the model in the format 'name:type':"
+  controller_actions_title: "Controller Actions"
+  controller_actions_prompt: "List any actions you would like created for the controller:"
   database: "Database"
   migrate_to_current: "Migrate to Current"
   migrate_to_version: "Migrate to Version..."
@@ -47,6 +61,13 @@ en:
   rest_methods: "REST methods"
   view_templates: "View Templates"
   create_partial: "Create Partial From Selection"
+  create_partial_outside_view: "The '%{command_name}' action works within view files only."
+  create_partial_from_selection_title: "Create a partial from the selected text"
+  create_partial_from_selection_prompt: "Name of the new partial: (omit the _ and .html.erb)"
+  overwrite: "Overwrite"
+  cancel: "Cancel"
+  partial_already_exists: "The partial file already exists."
+  overwrite_it: "Do you want to overwrite it?"
   for_loop_rhtml: "for loop in rhtml"
   layouts: "Layouts"
   migrations: "Migrations"
@@ -96,6 +117,7 @@ en:
   routes: "Routes"
   fixtures: "Fixtures"
   autocomplete_foreign_key_fixture: "Autocomplete Foreign Key Fixture Reference"
+  no_match_found_for_0: "No match found for %{filter}"
   autocomplete_foreign_key_fixture_1: "Autocomplete Foreign Key Fixture Reference (habtm)"
   unit_tests: "Unit Tests"
   functional_tests: "Functional Tests"
@@ -103,6 +125,10 @@ en:
   ajax_tests: "Ajax Tests"
   docs_for_word: "Documentation for Word"
   list_columns_of_model: "List Columns of a Model"
+  place_cursor_on_class_name: "Place cursor on class name (or variation) to show its schema"
+  rails_not_in_gemset: "You don't have Rails installed in this gemset."
+  class_is_not_a_model: "'%{class}' is not an Active Record derived class or was not recognised as a class."
+  use_0: "Use %{model_name}..."
   html_erb_template: "HTML ERB Template"
   rhtml_template: "RHTML Template"
   sweeper: 'Create sweeper class'
