Yet more work on APSTUD-4230 Externalize UI strings in Rails ruble

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,18 @@ en:
   go_to_stylesheet: "Go to Stylesheet"
   go_to_unit_test: "Go to Unit Test"
   go_to_fixture: "Go to Fixture"
+  no_association: "This file is not associated with any other files"
+  name_does_not_have_choice: "%{name} does not have a %{choice}"
+  fail_render_outside_controller: "Don't know where to go when rendering an action from outside a controller"
+  fail_redirect_outside_controller: "Don't know where to go when redirecting from outside a controller"
+  fail_cant_find_action_in_controller: "Couldn't find the %{action} action inside '%{controller}'"
+  no_javascript_identified: "No javascript identified"
+  no_stylesheet_identified: "No stylesheet identified"
+  no_go_to_file_found: "No 'go to file' directives found on this line."
+  view_not_found: "View File Not Found"
+  enter_name_of_view: "Enter the name of the new view file:"
+  missing_name: "Missing %{name}"
+  create_missing_name: "Create missing %{name}?"
   run_tests: "Run Tests"
   test_all: "Test All"
   test_functionals: "Test Functionals"
@@ -29,6 +41,13 @@ en:
   name_generator: "%{name} Generator"
   generator_complete: 'Generator Complete'
   done_generating_0: "Done generating %{name}"
+  args_for_0_generator: "Arguments for %{name} generator:"
+  name_scaffold_prompt: "Name of the model to scaffold:"
+  name_controller_prompt: "Name the new controller:"
+  name_model_prompt: "Name the new model:"
+  name_mailer_prompt: "Name the new mailer:"
+  name_migration_prompt: "Name the new migration:"
+  name_plugin_prompt: "Name the new plugin:"
   continue: 'Continue'
   create: 'Create'
   scaffold_controller_name: "Scaffold Controller Name"
